# linty_fresh

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  setup.cfg  setup.py
linty_fresh/: BUILD  __init__.py  main.py  problem.py
linty_fresh/linters/: BUILD  android.py  buck_unittest.py  checkstyle.py  eslint.py  mypy.py  passthrough.py  pmd.py  pylint.py  swiftlint.py  xcodebuild.py
linty_fresh/models/: BUILD  problem.py
linty_fresh/reporters/: BUILD  github_reporter.py
linty_fresh/storage/: git_storage_engine.py
scripts/: run_tests.sh  setup.sh
test/: .Python  pip-selfcheck.json
tests/: test_main.py
tests/linters/: BUILD  test_android.py  test_buck_unittest.py  test_checkstyle.py  test_eslint.py  test_mypy.py  test_passthrough.py  test_pmd.py  test_pylint.py  test_swiftlint.py  test_xcodebuild.py
tests/reporters/: BUILD  test_github_reporter.py
tests/utils/: BUILD  fake_client_session.py
tools/build_rules/: prelude_bazel
