[metadata]
name = linty-fresh
version = 0.7.0
license = apache
description = This package reports style violations for a Github PR as comments.
author = Roy Williams
author_email = rwilliams@lyft.com
url = https://github.com/lyft/linty_fresh
description-file = README.md
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
include_package_data = True
install_requires =
    aiohttp>=3.6.2, <4.0.0
    typing>=3.5.0.1, <4.0.0;python_version<"3.7"

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    linty_fresh = linty_fresh.main:main

[flake8]
exclude = .venv,.tox,dist,doc,build,*.egg
